--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "chat",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "source": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "parcel",
+    "build": "parcel build"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "Ildar Faskhetdinov",
+  "license": "ISC",
+  "devDependencies": {
+    "parcel": "^2.8.2"
+  }
 }
