--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "source": "static/index.html",
   "scripts": {
     "dev": "parcel",
+    "start": "node ./server",
     "build": "parcel build"
   },
   "keywords": [],
@@ -14,7 +15,11 @@
     "@parcel/transformer-sass": "^2.8.2",
     "parcel": "^2.8.2"
   },
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "dependencies": {
-    "handlebars": "^4.7.7"
+    "handlebars": "^4.7.7",
+    "express": "^4.18.2"
   }
 }
