--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "chat",
   "version": "1.0.0",
   "description": "",
+  "browserslist": "> 0.5%, last 2 versions, not dead",
   "source": "static/index.html",
   "scripts": {
     "dev": "parcel",
