--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "source": "static/index.html",
   "scripts": {
-    "dev": "parcel",
+    "dev": "parcel --open",
     "start": "PORT=3000 node ./server",
     "build": "parcel build"
   },
