--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
   "author": "Ildar Faskhetdinov",
   "license": "ISC",
   "devDependencies": {
-    "@parcel/transformer-sass": "2.8.2",
-    "parcel": "2.8.2"
+    "@parcel/transformer-sass": "^2.8.2",
+    "parcel": "^2.8.2"
   },
   "engines": {
     "node": ">=12.0.0"
   },
   "dependencies": {
-    "handlebars": "4.7.7",
-    "express": "4.18.2"
+    "handlebars": "^4.7.7",
+    "express": "^4.18.2"
   }
 }
