--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   "license": "ISC",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.2",
-    "parcel": "^2.8.2"
+    "parcel": "^2.8.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   },
   "engines": {
     "node": ">=12.0.0"
   },
   "dependencies": {
-    "handlebars": "^4.7.7",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "handlebars": "^4.7.7"
   }
 }
