--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "parcel": "^2.8.2",
     "prettier": "^2.8.3",
+    "stylelint": "^14.16.1",
+    "stylelint-scss": "^4.3.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
