--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,9 @@
   },
   "parser": "@typescript-eslint/parser",
   "rules": {
-    "import/prefer-default-export": "off"
+    "import/prefer-default-export": "off",
+    "no-underscore-dangle": "off",
+    "@typescript-eslint/lines-between-class-members": "off",
+    "class-methods-use-this": "off"
   }
 }
