--- a/.eslintrc
+++ b/.eslintrc
@@ -17,9 +17,20 @@
   },
   "parser": "@typescript-eslint/parser",
   "rules": {
+    "prettier/prettier": [
+      "error",
+      {
+        "singleQuote": true,
+        "jsxSingleQuote": true,
+        "trailingComma": "all",
+        "arrowParens": "avoid"
+      }
+    ],
     "import/prefer-default-export": "off",
     "no-underscore-dangle": "off",
     "@typescript-eslint/lines-between-class-members": "off",
-    "class-methods-use-this": "off"
+    "class-methods-use-this": "off",
+    "max-classes-per-file": "off",
+    "no-param-reassign": "off"
   }
 }
