--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "dev": "parcel --open",
     "start": "PORT=3000 node ./server",
     "build": "parcel build",
-    "stylelint": "stylelint '**/*.scss'",
+    "stylelint": "stylelint '**/*.scss'"
   },
   "keywords": [],
   "author": "Ildar Faskhetdinov",
   "license": "ISC",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.2",
+    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "eslint": "^8.33.0",
@@ -36,6 +37,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "handlebars": "^4.7.7"
+    "handlebars": "^4.7.7",
+    "uuid": "^9.0.0"
   }
 }
