--- a/.eslintrc
+++ b/.eslintrc
@@ -31,6 +31,7 @@
     "@typescript-eslint/lines-between-class-members": "off",
     "class-methods-use-this": "off",
     "max-classes-per-file": "off",
-    "no-param-reassign": "off"
+    "no-param-reassign": "off",
+    "consistent-return": "off"
   }
 }
