feat: create Router

--- a/.eslintrc
+++ b/.eslintrc
@@ -32,6 +32,7 @@
     "class-methods-use-this": "off",
     "max-classes-per-file": "off",
     "no-param-reassign": "off",
-    "consistent-return": "off"
+    "consistent-return": "off",
+    "no-constructor-return": "off"
   }
 }
