--- a/.eslintrc
+++ b/.eslintrc
@@ -35,6 +35,7 @@
     "consistent-return": "off",
     "no-constructor-return": "off",
     "no-restricted-syntax": "off",
-    "no-continue": "off"
+    "no-continue": "off",
+    "default-case": "off"
   }
 }
